Revision history for Marquee

0.16 2012/09/11
  - Added maxage option for static file caching and refactored to a class.
  - Fixed official site in Japanese.

0.15 2012/09/10
  - Improved bundle css styles.
  - Added session function for ep renderer.
  - Fixed some documents.

0.14 2012/09/07
  - Improved documentations.

0.13 2012/09/05
  - Improved documentations.
  - Improved plugin API to accept multiple arguments.
  - Added experimental plugin AuthPretty.

0.12 2012/09/03
  - Changed domain for official site.
  - Improved documentations.

0.11 2012/09/01
  - Fixed many bugs on windows.
  - Added cookbook.
  - Added paths options for pod viewer.
  - Added official site app.
  - Improved documentaions.

0.10 2012/08/30
  - Fixed a test

0.09 2012/08/30
  - Fixed bundling HTML to be valid.
  - Fixed debug screen for non-505 errors.
  - Improved documentation.

0.08 2012/08/29
  - Added markdown plugin and a command line option.
  - Added extends_as function for ep handler.
  - Added POD translations for Japanese.
  - Improved documentations.
  - Improved POD viewer and.
  - Improved context class API.
  - Changed router plugin API.
  - Changed that leading slash for to_abs indidates Marquee root.
  - Fixed a bug on default_file handling.
  - Fixed start method to catchup mojo Commit:2111684fe5b986d00ec5e8abef405d414aa34086

0.07 2012/08/04
  - Added include_as function to include a file as any SSI handlers.
  - Added warnings for template function redefinision.
  - Added EPHelperExample plugin.
  - Added a feature that include function got capable of static files.
  - Changed EP API that include and extends functions not to accept template
    extentions.
  - Added add_cond method for router plugin
  - Fixed some PODs.

0.06 2012/07/24
  - Added tree mode to auto index.
  - Renamed distribution from MojoSimpleHTTPServer to Marquee.
  - Improved iter function to accept blessed obj in array.
  - Removed basic auth from router in favor of Auth plugin.
