@@ -1,6 +1,7 @@
 Revision history for Marquee
 
 0.16 2012/09/11
+  - Added ETag plugin.
   - Added maxage option for static file caching and refactored to a class.
   - Fixed official site in Japanese.
 
